--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,7 @@ Recommended reading is available in the [books](/books) section.
 The lectures are conducted in a hybrid mode.
 Attendance is optional, and in-person sessions take place in Aula VI, Building G.
 
-1. 18-02-2025 (Tuesday) 11:40-13:20 - Lecture 1
+1. <del>18-02-2025 (Tuesday) 11:40-13:20 - Lecture 1</del>
 2. 25-02-2025 (Tuesday) 11:40-13:20 - Lecture 2
 3. 04-03-2025 (Tuesday) 11:40-13:20 - Lecture 3
 4. 11-03-2025 (Tuesday) 11:40-13:20 - Lecture 4
