--- a/lecture1.qmd
+++ b/lecture1.qmd
@@ -94,15 +94,14 @@ import pandas as pd
 df = pd.read_csv("transactions.csv")  
 
 df['transaction_date'] = pd.to_datetime(df['transaction_date'])
-df['month'] = df['transaction_date'].dt.to_period('M')  # Ekstrakcja miesiąca
+df['month'] = df['transaction_date'].dt.to_period('M') 
 
-# Agregacja danych - miesięczne sumy transakcji
+# Agg
 monthly_sales = df.groupby(['month'])['amount'].sum()
 
-# Zapis wyników do pliku (np. raportu)
 monthly_sales.to_csv("monthly_report.csv")  
 
-print("Raport zapisany!")
+print("Raport save!")
 ```
 
 If you wanted to create data for an example.
@@ -163,11 +162,11 @@ from datetime import datetime
 bootstrap_servers = 'localhost:9092'
 topic = 'transactions' 
 
-# Funkcja generująca przykładowe dane transakcji
+
 def generate_transaction():
     transaction = {
         'transaction_id': f'TX{random.randint(1000, 9999)}',
-        'amount': round(random.uniform(10, 10000), 2),  # Kwota między 10 a 10 000
+        'amount': round(random.uniform(10, 10000), 2),  
         'transaction_date': datetime.now().strftime('%Y-%m-%d %H:%M:%S'),
         'merchant': random.choice(['Merchant_A', 'Merchant_B', 'Merchant_C', 'Merchant_D']),
         'card_type': random.choice(['Visa', 'MasterCard', 'AmEx']),
@@ -186,7 +185,6 @@ for _ in range(1000):
     print(f"Sent: {transaction}")
     time.sleep(1) 
 
-# Zakończenie działania producenta
 producer.flush()
 producer.close()
 ```
@@ -197,7 +195,6 @@ Consument example
 from kafka import KafkaConsumer
 import json  
 
-# Konsumer do pobierania danych z Kafka
 consumer = KafkaConsumer(
     'transactions',
     bootstrap_servers='localhost:9092',
@@ -205,11 +202,11 @@ consumer = KafkaConsumer(
     value_deserializer=lambda x: json.loads(x.decode('utf-8'))
 )
 
-# Pobieranie transakcji w niemal real-time i analiza
+
 for message in consumer:
     transaction = message.value
     if transaction["amount"] > 8000:
-        print(f"🚨 Wykryto dużą transakcję: {transaction}")
+        print(f"🚨 Anomaly transaction: {transaction}")
 ```
 
 Example of the DataSet
