--- a/lecture3.qmd
+++ b/lecture3.qmd
@@ -13,17 +13,26 @@ jupyter: python3
 Introducing students to the fundamentals of real-time analytics.
 
 
-# Data Streams
+# Data Streams: Understanding the Flow of Real-Time Information
 
-You might associate streaming with services that transmit video online. When you're watching your favorite TV series (just like in class now), the streaming platform continuously delivers to you the next "chunks" of video.
+You might associate `streaming` with platforms that deliver video content online, such as Netflix or YT.
+When you’re watching your favorite TV show, for example, the streaming service continuously sends you `chunks` of video, allowing you to watch without waiting for the entire video to download.
 
-A similar concept applies to streaming data. The chunks being transmitted don't have to be in video format – it all depends on the business goal. For instance, continuous measurements from sensors in factories, power plants, or other monitoring systems.
+This concept of continuous, real-time delivery applies to streaming data. 
+However, the “chunks” of data don’t have to be video. 
+Instead, they could represent a wide range of information, such as continuous measurements from sensors in factories, power plants, or even monitoring systems in healthcare.
 
-The key here is that you're dealing with a continuous stream of data that needs to be processed in real-time. You can't wait for the production line to stop in order to conduct an analysis – any issues that arise should be logged immediately so that quick action can be taken.
+The key idea here is that streaming data is generated continuously and needs to be processed in real time. 
+Unlike traditional batch processing (where large datasets are collected and analyzed later), stream processing works with live data, making it possible to detect issues, identify patterns, and make decisions in the moment.
+
+For instance, you can’t afford to wait for a production line to stop in order to analyze its data. 
+If a sensor detects an anomaly or failure, it needs to be logged immediately so that corrective action can be taken without delay. 
+This is the essence of stream processing—the continuous analysis of data as it flows.
 
 **Stream processing** refers to the continuous processing and analysis of large sets of data in motion.
 
-This can be compared to other aspects of Big Data. **Batch processing** is the opposite of stream processing – you first collect large amounts of data, and only then analyze them. Of course, you could download the entire video before watching it, but would that really make sense?
+This can be compared to other aspects of Big Data. **Batch processing** is the opposite of stream processing – you first collect large amounts of data, and only then analyze them. 
+Of course, you could download the entire video before watching it, but would that really make sense?
 
 There are situations where a batch approach is sufficient, but you can already see that stream processing can offer additional business value that is difficult to achieve with traditional batch processing.
 
@@ -31,9 +40,12 @@ There are situations where a batch approach is sufficient, but you can already s
 
 ### Real-Time Data Analytics vs. Event Stream Processing
 
-It’s easy to confuse real-time analytics with stream analytics (or event stream processing). While stream analytics technologies enable real-time analysis, they are not the same thing!
+While both real-time data analytics and event stream processing involve the analysis of data with minimal delay, they are not the same thing.
 
-**Stream analytics** involves processing data in motion, while **real-time analytics** refers to any data processing method where the delay is short enough to meet the business requirements for "real-time."
+It’s easy to confuse real-time analytics with stream analytics (or event stream processing). 
+While stream analytics technologies enable real-time analysis, they are not the same thing!
+
+**Stream Analytics** (or event stream processing) involves analyzing a continuous stream of data, usually tied to a dedicated architecture. It focuses on events that occur over time—things like sensor readings, clicks on a website, or changes in stock prices.
 
 Typically, real-time analytics systems are divided into hard and soft real-time systems:
 - **Hard real-time systems** (e.g., flight control systems) require strict adherence to deadlines – any delay could have catastrophic consequences.
@@ -43,31 +55,37 @@ Moreover, while stream analytics assumes the presence of a dedicated streaming a
 
 The key point is that real-time analytics means processing data within the time period that a business defines as "real-time" – this can range from a few milliseconds to a few seconds, depending on business needs.
 
-### Data Sources for Streaming Data Include:
-  • Equipment sensors,  
-  • Clickstreams,  
-  • Location tracking,  
-  • User interactions (e.g., user actions on your website),  
-  • Social media channels,  
-  • Stock market data,  
-  • App activity,  
-  • And more.
+### Data Sources for Streaming:
 
-Companies use stream analytics to detect and interpret patterns, create visualizations, generate insights and alerts, and trigger processes in real-time or near-real-time.
+The variety of data sources that can feed into streaming systems is vast and spans several industries. Examples include:
 
-### Business Justification
+- IoT devices, equipment sensors,  
+- clickstreams,  
+- geolocation tracking,  
+- user interactions (e.g., user actions on your website),  
+- social media channels,  
+- stock market data,  
+- app activity.
 
-Analytics helps identify significant patterns in data and discover new knowledge – both in streaming data and traditional analytics.
+This real-time data is used by businesses to detect patterns, create visualizations, trigger alerts, and take immediate action.
 
-However, in today's world, the nature of "finding meaningful patterns in data" has changed because the very nature of the data itself has changed. Its speed, volume, and variety have exploded.
+### Business Justification: The Need for Streaming Data
 
-Twitter generates over 500 million tweets daily, and according to IDC forecasts, by 2025, IoT devices will be able to generate 79.4 zettabytes (ZB) of data. This trend is accelerating.
+The sheer volume and speed of modern data are unprecedented. 
+In 2025, IoT devices are expected to generate a staggering 79.4 zettabytes (ZB) of data. 
+Similarly, Twitter processes over 500 million tweets every day.
+
+The speed at which this data is generated means traditional batch processing is no longer enough. 
+Stream analytics is necessary for businesses to unlock insights from this massive flow of real-time information.
+
+For example, IoT sensors can detect anomalies in equipment performance, allowing maintenance teams to take proactive action. 
+In stock trading, real-time regression models can help traders make split-second decisions about buying and selling based on the latest market data.
 
 ### Example Business Applications
 
-1. IoT Sensor Data and Anomaly Detection  
-2. Stock Trading (Regression Problems) - Response time to changes and the timing of buying and selling stocks.  
-3. Clickstream for Websites (Classification Problem) - Tracking and analyzing visitors on a website - Personalization of the site and content.
+1. IoT Sensor Data and Anomaly Detection  - Sensors in factories or on machinery can generate continuous data streams. Stream analytics can detect anomalies in real-time, allowing immediate maintenance or corrective actions to prevent costly downtime or equipment failure.
+2. Stock Trading, Real-time regression models analyze price movements and help traders identify trends. Timely processing of streaming data can trigger trades in response to market changes—potentially within milliseconds.  
+3. Clickstream Analytics for Websites. Real-time analytics of website visitors’ actions can personalize the user experience, adjust content dynamically, or trigger targeted ads based on live user behavior.
 
 [8 Best Examples of Real-Time Data Analytics](https://www.linkedin.com/pulse/8-best-examples-real-time-data-analytics-bernard-marr/)  
 [Business Applications](https://www.forbes.com/sites/forbestechcouncil/2021/10/26/how-to-build-a-strong-business-case-for-streaming-analytics/?sh=eee8eaa465d0)
@@ -76,13 +94,13 @@ Twitter generates over 500 million tweets daily, and according to IDC forecasts,
 
 ### Learn more about [streaming data](https://medium.com/cuelogic-technologies/analyzing-data-streaming-using-spark-vs-kafka-bcfdc33ac828)
 
-> **Definition 1** – *Event* is anything that can be observed at a specific point in time. It is generated as a direct result of an action.  
+> **Definition 1** – **Event**: Any observable occurrence at a specific point in time. In data streams, events are immutable records that represent a specific action.
 >
-> **Definition 2** – In the context of data, an *event* is an **immutable** record in a data stream, encoded as JSON, XML, CSV, or in a binary format.  
+> **Definition 2** – In the context of data, an *event* is encoded as JSON, XML, CSV, or in a binary format.  
 >
-> **Definition 3** – A *continuous event stream* is an infinite set of individual events ordered over time, such as logs from devices.  
+> **Definition 3** – **Continuous Event Stream**: An ongoing sequence of events that happen over time, such as logs from servers, sensor readings, or user activity.
 >
-> **Definition 4** – A *data stream* refers to data created incrementally over time, generated from static sources (e.g., database, file read lines) or dynamic sources (e.g., logs, sensors, functions).  
+> **Definition 4** – **Data Stream**: A continuous flow of data from dynamic sources like sensor readings or log entries. These streams can be generated in real-time or derived from static sources like databases or files.
 >
 > **A business is an organization that generates and responds to a continuous stream of events.**
 
@@ -218,100 +236,4 @@ In stream data analysis, interpreting time is a complex issue due to:
 2. Data arriving with delays, requiring watermarking and time window techniques,
 3. Different approaches to event time vs. processing time impacting result accuracy.
 
-# Microservices architecture
 
-The concept of microservices is essential to understand when working on architectures. Although there are other ways to architecture software projects, `microservices` are famous for a good reason. They help teams be flexible and effective and help to keep software loose and structured. 
-
-The idea behind microservices is in the name: of software is represented as many small services that operate individually. 
-When looking at the overall architecture, each of the microservices is inside a small black box with clearly defined inputs and outputs.
-
-An often-chosen solution is to use Application Programming Interfaces ( **API**) to allow different microservices to communicate
-
-### Communication through API
-
-A central component in microservice architectures is the use of APIs. An API is a part that allows you to connect two microservices. APIs are much like websites. Like a website, the server sends You the code that represents the website. Your internet browser then interprets this code and shows you a web page. 
-
-Let's take a business case with the ML model as a service. Let’s assume you work for a company that sells apartments in Boston.
-We want to increase our sales and offer better quality services to our customers with a new mobile application which can be used even by 1 000 000 people simultaneously. 
-We can realize this by serving a prediction of house value when the user requests for pricing over the web.
-
-#### Serving a Model 
-
-- Training a good ML model is ONLY the first part:
-You do need to make your model available to your end-users
-You do this by either providing access to the model on your server.
-- When serving ML Model You need: a model, an interpreter, input data.
-- Important Metrics:
-
-1. Latency,
-2. Cost,
-3. Throughput (number of requests served per unit time)
-
-> Sharing data between two or more systems has always been a fundamental requirement of software development – DevOps vs MLOps.
-
-When you call an API, the API will receive your request. The request triggers your code to be run on the server and generates a response sent back to you. If something goes wrong, you may not receive any reply or receive an error code as an HTTP status code. 
-
-> Client-Server: Client (system A) requests to a URL hosted by system B, which returns a response. 
-It’s identical to how a web browser works. 
-A browser requests for a specific URL. 
-The request is routed to a web server that returns an HTML (text) page.
-
-> Stateless: The client request should contain all the information necessary to respond.
-
-You can call APIs with a lot of different tools. 
-Sometimes, you can even use your web browser. 
-Otherwise, tools such as CURL do the job on the command line. 
-You can use tools such as Postman for calling APIs with the user interface.
-
-> All communication is covered in fixed rules and practices, which are called the HTTP protocol.
-
-#### Request
-
-1.  An Endpoint URL a domain, port, path, query string - http://mydomain:8000/getapi?&val1=43&val2=3
-2.  The HTTP methods - GET, POST
-3.  HTTP headers contain authentication information, cookies metadata
-        - Content-Type: application/json, text ... Accept: application/json, Authorization: Basic abase64string, Tokens etc
-4.  Request body
-
-The most common format for interaction between services is the `JavaScript Object Notation` format.
-it is a data type that very strongly resembles the dictionary format in Python - key-value object.  
-
-```json
-{
-"RAD": 1,
-"PTRATIO": 15.3, "INDUS": 2.31, "B": 396.9,
-"ZN": 18,
-"DIS": 4.09, "CRIM": 0.00632, "RM": 6.575, "AGE": 65.2, "CHAS": 0, "NOX": 0.538, "TAX": 296, "LSTAT": 4.98
-}
-```
-
-#### Response
-
-1. The response payload is defined in the response header: 
-```bash
-200 OK
-Content-Encoding: gzip
-Content-Type: text/html; charset=utf-8
-Date: Mon, 18 Jul 2016 16:06:00 GMT Server: Apache
-Path=/;
-```
-
-2. Header example: "Content-Type" => "application/json; charset=utf-8", "Server" => "Genie/Julia/1.8.5
-
-3. Body example: 
-```json
-{":input":{"RAD":1,"PTRATIO":15.3,"INDUS":2.31,.....}}, {":prediction":[29.919737211857683]}
-```
-4. HTTP status code:
-• 200 OK is used for successful requests,
-• 40X Access Denied
-• 50X Internal server error
-
-#### REST API
-
-The Representational State Transfer (REST) API works just like other APIs, but it follows a certain set of style rules that make it reconizable as a REST API: 
-- Client-server architecture
-- Statelessnes
-- Cacheability
-- Layered system 
-- Uniform Interface
