--- a/kafka_codes/kafka2.ipynb
+++ b/kafka_codes/kafka2.ipynb
@@ -5,17 +5,9 @@
    "id": "64f1864a-d95e-471d-b4dc-6a3fb9d4c70e",
    "metadata": {},
    "source": [
-    "# Version with Environment Access\n",
+    "# Kafka Producer\n",
     "\n",
-    "This version of the exercises can be completed using a new Docker image and running Docker Desktop on your own computer, as well as in the SGH environment.\n",
-    "\n",
-    "### 1️⃣ Starting the Environment\n",
-    "\n",
-    "Go to your browser and open the environment page (for Docker, open localhost:8888).\n",
-    "\n",
-    "Launch Jupyter Lab, then open a new terminal (using the terminal icon).\n",
-    "\n",
-    "### 2️⃣ Checking Directories and Kafka Availability\n",
+    "##  1️⃣ Checking Directories and Kafka Availability\n",
     "\n",
     "Navigate to the home directory and list all elements. Check if the kafka directory is present in the list.\n",
     "```sh\n",
@@ -23,14 +15,14 @@
     "ls -la\n",
     "```\n",
     "\n",
-    "### 3️⃣ Checking the List of Topics\n",
+    "## 2️⃣ Checking the List of Topics\n",
     "\n",
     "Run the following command to check the list of topics on the Kafka server:\n",
     "```sh\n",
     "kafka/bin/kafka-topics.sh --list --bootstrap-server broker:9092\n",
     "```\n",
     "\n",
-    "### Adding a New Topic\n",
+    "## 3️⃣ Creating a New Topic\n",
     "\n",
     "Create a topic named `streaming`:\n",
     "```sh\n",
@@ -42,7 +34,7 @@
     "kafka/bin/kafka-topics.sh --list --bootstrap-server broker:9092 | grep streaming\n",
     "```\n",
     "\n",
-    "### 5️⃣ Running a Python Producer\n",
+    "## 4️⃣ Creating a New Python Producer script\n",
     "\n",
     "In a new terminal, create a file named stream.py and paste the following code:"
    ]
@@ -99,7 +91,7 @@
    "id": "7b1e83cf-7044-42d0-88b4-a5c888b3af55",
    "metadata": {},
    "source": [
-    "### 6️⃣ Running a Console Consumer\n",
+    "##  Running a Console Consumer\n",
     "\n",
     "To check if message sending works, open another terminal window and start the consumer:\n",
     "```sh\n",
@@ -107,7 +99,7 @@
     "```\n",
     "Now, all messages sent by the producer should appear in the consumer console.\n",
     "\n",
-    "### 7️⃣ Finishing Up\n",
+    "##  Finishing Up\n",
     "\n",
     "Remember to run commands from the appropriate directory.\n",
     "When you’re done with the exercises, use Ctrl+C to stop both the producer and the consumer.\n",
