--- a/labs/lab2.ipynb
+++ b/labs/lab2.ipynb
@@ -5,11 +5,11 @@
    "id": "b7c2acc3-e78f-4a6c-8447-db245a8da285",
    "metadata": {},
    "source": [
-    "# **Creating an API with Flask – Introduction**\n",
+    "# API with Flask Excercises\n",
     "\n",
     "In this exercise, you will learn how to create a simple API in Flask, run it, send requests to it, and use a decision model based on a basic logical rule.\n",
     "\n",
-    "## **1️⃣ Creating a Basic API**\n",
+    "## 1️⃣ Creating a Basic API\n",
     "\n",
     "First, we will create a basic Flask application.\n",
     "\n",
@@ -82,7 +82,7 @@
     "If everything is working correctly, you will see the message `Welcome to my API!`.\n",
     "---\n",
     "\n",
-    "## **2️⃣ Adding a New Subpage**\n",
+    "## 2️⃣ Adding a New Subpage\n",
     "Let’s add a new subpage `mypage` that will return the message `This is my page!`."
    ]
   },
@@ -126,7 +126,7 @@
     "\n",
     "---\n",
     "\n",
-    "## **3️⃣ Automatically Starting the Server from Jupyter Notebook\n",
+    "## 3️⃣ Automatically Starting the Server from Jupyter Notebook\n",
     "Close the previously started server (`Ctrl+C` in the terminal) and restart it directly from Jupyter Notebook using `subprocess.Popen`:"
    ]
   },
@@ -165,7 +165,7 @@
    "id": "6a02adf4-8ac0-4e3c-b1ee-0a9e1cc8933f",
    "metadata": {},
    "source": [
-    "## **4️⃣ Handling Parameters in the URL**\n",
+    "## 4️⃣ Handling Parameters in the URL\n",
     "\n",
     "Let’s add a new subpage /hello that will accept a name parameter.\n",
     "\n",
@@ -207,7 +207,7 @@
    "id": "fc1ae653-8609-49f7-a992-3ff437f96700",
    "metadata": {},
    "source": [
-    "## **5️⃣ Creating an API with a Simple ML Model\n",
+    "## 5️⃣ Creating an API with a Simple ML Model\n",
     "We will create a new subpage /api/v1.0/predict, which accepts two numbers and returns the result of a decision rule:\n",
     "-\tIf the sum of the two numbers is greater than 5.8, it returns 1.\n",
     "-\tOtherwise, it returns 0.\n"
@@ -227,7 +227,7 @@
     "\n",
     "---\n",
     "\n",
-    "## **Summary**\n",
+    "## Summary\n",
     "\n",
     "After completing this exercise, students will be able to:\n",
     "✅ Create a basic API in Flask.\n",
